Updates from ShareLaTeX

--- a/1_introduction.tex
+++ b/1_introduction.tex
@@ -1,14 +1,14 @@
-The term \textit{traffic assignment} (or route choice, or route assignment) captures a large array of problems concerning the distribution of traffic over a network. Traffic assignment problems arise in transportation planning applications, such as in the traditional ``four-step'' procedure, where it occupies the final step, following trip generation, trip distribution, and mode choice [AAA].  The fundamental principle that guides most traffic assignment models is Wardrop's principle [BBB], which states that amongst the available alternatives, drivers will select routes that minimize their travel times. Because the speed of traffic tends to decrease as the number of vehicles on the route increases, Wardrop's principle leads to an iterated game in which drivers test new routes, day after day, until they converge to a Nash equilibrium, a.k.a. a \textit{user equilibrium}. The term is also used for problems that involve a single decision maker, who prescribes the routes for users in order to optimize some system-level performance metric, e.g. total travel time, emissions, energy consumption. These are mathematical programs, and their solutions are known as \textit{system optimal} assignments. We will focus in this paper on user equilibrium traffic assignments.
+The term \textit{traffic assignment} (or route choice, or route assignment) captures a large array of problems concerning the distribution of traffic over a network. Traffic assignment problems arise in transportation planning applications, such as in the traditional ``four-step'' procedure, where it occupies the final step, following trip generation, trip distribution, and mode choice \cite{mcnally2007four}.  The fundamental principle that guides most traffic assignment models is Wardrop's principle \cite{wardrop1952some}, which states that amongst the available alternatives, drivers will select routes that minimize their travel times. Because the speed of traffic tends to decrease as the number of vehicles on the route increases, Wardrop's principle leads to an iterated game in which drivers test new routes, day after day, until they converge to a Nash equilibrium, a.k.a. a \textit{user equilibrium}. The term is also used for problems that involve a single decision maker, who prescribes the routes for users in order to optimize some system-level performance metric, e.g. total travel time, emissions, energy consumption. These are mathematical programs, and their solutions are known as \textit{system optimal} assignments. We will focus in this paper on user equilibrium traffic assignments.
 
 Since the pioneering work of Wardrop, the mathematical and numerical study of traffic assignment has progressed at a moderate pace. This is perhaps mostly due to a historical scarcity of traffic data and network information, but also because of the difficulty of the problem. [CCC] gives several examples in which problems could not be solved for networks of useful size. It is not surprising therefore that the problem has received renewed interest with recent increases in traffic and network data, and computational power. Also driving this renewal are concerns about the `unintended consequences' of the widespread use of routing apps [DDD], as well as advances in autonomous driving technologies.
 
 An investigation into the techniques of traffic assignment reveals a multitude of models, numerical methods, and performance metrics. As is usually the case, the more detailed the model, the more expensive the computation. However it is not clear under which circumstances the additional effort (or investment in computational resources) is necessary. For example, although it is usually agreed that dynamical models that capture the essential phenomenon of congestion are desirable, it is also true that the computation (as well as network configuration effort) involved in solving dynamic traffic assignment (DTA) problems can be large. On the other hand, existing static planning methods cannot fully model traffic congestion because of their inability to represent queue formation and dissipation when traffic demand exceeds road capacities\cite{nie2010solving}. 
 
-This paper presents a software framework for addressing such questions. The software is based on the formulation of traffic assignment as a \textit{variational inequality}, introduced by Nagurney [EEE]. This is a very general formulation, as it requires only continuity (\XXX TRUE?) of the traffic model. Hence, it covers a wide range of models: static and dynamic, macroscopic and microscopic, 'analytical' and 'simulation-based', etc. The software is modular and extensible, in the sense that it provides interfaces for incorporating new models, cost functions, and numerical solvers. 
+This paper presents a software framework for addressing such questions. The software is based on the formulation of traffic assignment as a \textit{variational inequality}, introduced by Nagurney \cite{nagurney2013network}. This is a very general formulation, as it requires only continuity (\XXX TRUE?) of the traffic model. Hence, it covers a wide range of models: static and dynamic, macroscopic and microscopic, 'analytical' and 'simulation-based', etc. The software is modular and extensible, in the sense that it provides interfaces for incorporating new models, cost functions, and numerical solvers. 
 
 There are many other programs, both commercial and shared, that solve dynamic traffic assignment problems. 
 
-\ggnote{I want to de-emphasize the analytical vs simulation-based dichotomy because I dont understand it. Is beats analytical or simulation-based. If simulation-based, then CTM is simulation-based? Most people would disagree, because the line is very fuzzy, and really the distinction makes little sense (as our framework demonstrates). Instead lets focus on modularity: All others (I hope) bake in the model, cost function, and solver.}
+\ggnote{I want to de-emphasize the analytical vs simulation-based dichotomy because I don't understand it. Is beats analytical or simulation-based. If simulation-based, then CTM is simulation-based? Most people would disagree, because the line is very fuzzy, and really the distinction makes little sense (as our framework demonstrates). Instead lets focus on modularity: All others (I hope) bake in the model, cost function, and solver.}
 
 \ggnote{The list needs to be fleshed out a bit. For each, can we answer these questions: what is the problem being solved? What is the model? What is the solver algorithm? Then we can categorize them in some way.}
 
@@ -17,7 +17,7 @@ There are many other programs, both commercial and shared, that solve dynamic tr
 \item Dynameq \cite{mahut2010traffic} software provides a vehicle-based traffic simulation with capacity to determine dynamic user equilibrium.  
 \item DynaMIT-P \cite{DynaMIT,ben2001dynamit} is simulation-based DTA system designed to evaluate transportation
 systems at the planning level. It comprises a demand and a supply simulator that communicate to produce a user equilibrium routing guidance using the rolling horizon process. 
-\item DYNASMART-P \cite{DYNASMART,mahmassani2004dynasmart} is a simulation-based DTA tool based on the the messcopic traffic simulator DYNASMART. 
+\item DYNASMART-P \cite{DYNASMART,mahmassani2004dynasmart} is a simulation-based DTA tool based on the the mesoscopic traffic simulator DYNASMART. 
 \item DynusT \cite{chiu2011dynust} is a simulation-based DTA software that use a gap function vehicle-based solution algorithm to determine user equilibrium.
 \item INTEGRATION \cite{rakha2012integration} is DTA tool that uses a trip-based microscopic traffic model. It includes several methods to calculate DTA user equilibrium. 
 
