--- a/2_formulation.tex
+++ b/2_formulation.tex
@@ -45,7 +45,7 @@ A feasible assignment $h^*$ is an equilibrium assignment if and only if \XXX it 
 \label{eq:vi}
 \langle F(h^*), h-h^* \rangle \geq 0 \quad \forall h\in\mathcal{H}
 \end{equation}
-Nagurney [III] provides proofs of existence and uniqueness of solutions to (\ref{eq:vi}), respectively under conditions of continuity and strict monotonicity of $F$. It should be noted however that strict monotonicity is not generally to be expected of traffic, since the addition of a single vehicle to a nearly empty network may not affect the travel time of any single driver.
+Nagurney \cite{nagurney2013network} provides proofs of existence and uniqueness of solutions to (\ref{eq:vi}), respectively under conditions of continuity and strict monotonicity of $F$. It should be noted however that strict monotonicity is not generally to be expected of traffic, since the addition of a single vehicle to a nearly empty network may not affect the travel time of any single driver.
 
 In the case that $F$ is continuously differentiable and its Jacobian $\nabla F$ is positive semidefinite everywhere in $\mathcal{H}$, there exists a scalar function $f:\mathcal{H}\rightarrow \mathbb{R}$ such that $\nabla f = F$, and solutions to (\ref{eq:vi}) are also solutions to the following optimization problem,
 \begin{equation}
