--- a/citation.bib
+++ b/citation.bib
@@ -157,3 +157,52 @@
   year={2013},
   publisher={Springer Science \& Business Media}
 }
+
+@incollection{mcnally2007four,
+  title={The four-step model},
+  author={McNally, Michael G},
+  booktitle={Handbook of Transport Modelling: 2nd Edition},
+  pages={35--53},
+  year={2007},
+  publisher={Emerald Group Publishing Limited}
+}
+
+@inproceedings{wardrop1952some,
+  title={Some theoretical aspects of road traffic research},
+  author={Wardrop, John Glen},
+  booktitle={Inst Civil Engineers Proc London/UK/},
+  year={1952}
+}
+
+@article{daganzo1995cell,
+  title={The cell transmission model, part II: network traffic},
+  author={Daganzo, Carlos F},
+  journal={Transportation Research Part B: Methodological},
+  volume={29},
+  number={2},
+  pages={79--93},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{whitham1955kinematic,
+  title={On kinematic waves II. A theory of traffic flow on long crowded roads},
+  author={Whitham, GB},
+  journal={Proc. R. Soc. Lond. A},
+  volume={229},
+  number={1178},
+  pages={317--345},
+  year={1955},
+  publisher={The Royal Society}
+}
+
+@article{richards1956shock,
+  title={Shock waves on the highway},
+  author={Richards, Paul I},
+  journal={Operations research},
+  volume={4},
+  number={1},
+  pages={42--51},
+  year={1956},
+  publisher={INFORMS}
+}
