Updates from ShareLaTeX

--- a/2_formulation.tex
+++ b/2_formulation.tex
@@ -1,4 +1,4 @@
-The goal of the problem is to find a demand assignment that produces an equilibrium state trajectory in the sense of Wardrop[GGG]. The traffic network  is represented as a graph. Vehicles enter and exit the network through origin and destination nodes. They travel through the network following \textit{paths}. 
+The goal of the problem is to find a demand assignment that produces an equilibrium state trajectory in the sense of Wardrop\cite{wardrop1952some}. The traffic network  is represented as a graph. Vehicles enter and exit the network through origin and destination nodes. They travel through the network following \textit{paths}. 
 % Vehicles can be categorized according to their \textit{type}, which may encode different levels of access to information (e.g. using or not using routing apps), access to particular routes (e.g. HOV versus LOV), or driving characteristics (e.g. cars versus trucks).
 
 \vspace{1em}
@@ -60,6 +60,6 @@ In the case that $F$ is continuously differentiable and its Jacobian $\nabla F$ 
 Thus we can classify traffic assignment problems into two broad categories: those with positive semidefinite Jacobians, which are optimization problems, and the more general problems, which remain as variational inequalities. It is worth considering the phenomena that are lost in using path cost functions $F$ with positive semi-definite Jacobians. The symmetry of $\nabla F$ means that an additional unit of demand on any path $p$ has the same effect on another path $p'$ as an additional unit of demand on path $p'$ would have on $p$. This assumption precludes at least two important features of traffic models:
 \begin{enumerate}
 \item \textit{permissive left turns}: At intersections, vehicles are often allowed to turn left through gaps in oncoming traffic. When the flow of oncoming traffic is large, then these gaps are rare, and vehicles must wait longer to turn. However, because the oncoming traffic has the right-of-way, their travel times are not impacted by the number of vehicles waiting to turn left. 
-\item \textit{backward propagation of congestion}: One of the essential features of traffic dynamics is that regions of high density propagate upstream [JJJ]. Consider two paths $p$ and $p'$ that cross at an intersection. Paths $p$ is nearly empty, but $p'$ is congested up to the intersection. An additional vehicle on $p'$ will block the intersection, and thus obstruct vehicles on $p$, but an additional vehicle on $p$ has no effect on $p'$.
+\item \textit{backward propagation of congestion}: One of the essential features of traffic dynamics is that regions of high density propagate upstream. Consider two paths $p$ and $p'$ that cross at an intersection. Paths $p$ is nearly empty, but $p'$ is congested up to the intersection. An additional vehicle on $p'$ will block the intersection, and thus obstruct vehicles on $p$, but an additional vehicle on $p$ has no effect on $p'$.
 \end{enumerate}
 A second level of classification relates to whether the function $F$ is static or dynamic. Within optimization-based traffic assignment, these two types have naturally been treated using the techniques of mathematical programming and optimal control respectively. If the function \XXX is monotonic (strictly monotonic), the optimization problems are ... convex (strictly convex).
