--- a/_main.tex
+++ b/_main.tex
@@ -52,25 +52,32 @@ bayen@berkeley.edu}
 \end{IEEEkeywords}
 
 \section{Introduction}
+\label{sec:intro}
 \input{1_introduction}
 
 \section{Problem formulation}
+\label{sec:formulation}
 \input{2_formulation} 
 
 \section{Traffic models}
+\label{sec:models}
 \input{3_models}
 
 \section{Algorithms}
+\label{sec:algorithms}
 \input{4_algorithms}
 
 \section{Software}
+\label{sec:software}
 \input{5_software}
 
 \section{Experiments}
+\label{sec:experiments}
 \input{6_experiments}
 
 
-\section{Conclusions}\label{sec:concl}
+\section{Conclusions}
+\label{sec:conclusions}
 
 \section*{Acknowledgment}
 
