--- a/citation.bib
+++ b/citation.bib
@@ -206,3 +206,88 @@
   year={1956},
   publisher={INFORMS}
 }
+
+@misc{ta_solver,
+  author = {Ugirumurera, Juliette and Gomes, Gabriel},
+  title = {{ta\_solver}},
+  howpublished = "\url{https://bitbucket.org/gcgomes/ta_solver}",
+  year = {2017}, 
+  note = "[Online; accessed 16-April-2018]"
+}
+
+@misc{ wiki_Route_Choice,
+  author = {Fundamentals of Transportation/Route Choice},
+  title = {{Fundamentals of Transportation/Route Choice --- {W}ikipedia{,} The Free Encyclopedia}},
+  year = {2010},
+  howpublished = "\url{https://en.wikibooks.org/wiki/Fundamentals_of_Transportation/Route_Choice},
+  note = "[Online; accessed 18-April-2018]"
+}
+
+@article{wright2017node,
+  title={On node models for high-dimensional road networks},
+  author={Wright, Matthew A and Gomes, Gabriel and Horowitz, Roberto and Kurzhanskiy, Alex A},
+  journal={Transportation Research Part B: Methodological},
+  volume={105},
+  pages={212--234},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{tampere2011generic,
+  title={A generic class of first order node models for dynamic macroscopic simulation of traffic flows},
+  author={Tamp{\`e}re, Chris MJ and Corthout, Ruben and Cattrysse, Dirk and Immers, Lambertus H},
+  journal={Transportation Research Part B: Methodological},
+  volume={45},
+  number={1},
+  pages={289--309},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{newell1993simplified,
+  title={A simplified theory of kinematic waves in highway traffic, part I: General theory},
+  author={Newell, Gordon F},
+  journal={Transportation Research Part B: Methodological},
+  volume={27},
+  number={4},
+  pages={281--287},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@misc{traffic_apps,
+  title = {9 Investigates traffic apps pushing drivers into neighbrhood streets},
+  howpublished = {\url{https://www.wsoctv.com/news/9-investigates/9-investigates-traffic-apps-pushing-drivers-into-neighborhood-streets/375053276}},
+  note = {Accessed: 2018-04-18}
+}
+
+@article{merchant1978model,
+  title={A model and an algorithm for the dynamic traffic assignment problems},
+  author={Merchant, Deepak K and Nemhauser, George L},
+  journal={Transportation science},
+  volume={12},
+  number={3},
+  pages={183--199},
+  year={1978},
+  publisher={INFORMS}
+}
+
+@article{merchant1978optimality,
+  title={Optimality conditions for a dynamic traffic assignment model},
+  author={Merchant, Deepak K and Nemhauser, George L},
+  journal={Transportation Science},
+  volume={12},
+  number={3},
+  pages={200--207},
+  year={1978},
+  publisher={INFORMS}
+}
+
+@inproceedings{thai2016negative,
+  title={Negative externalities of GPS-enabled routing applications: A game theoretical approach},
+  author={Thai, J{\'e}r{\^o}me and Laurent-Brouty, Nicolas and Bayen, Alexandre M},
+  booktitle={Intelligent Transportation Systems (ITSC), 2016 IEEE 19th International Conference on},
+  pages={595--601},
+  year={2016},
+  organization={IEEE}
+}
